--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,22 @@
-button {
-    background: beige;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: #090909;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.app-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh; /* Контейнер занимает полную высоту экрана */
+    width: 100%;
 }
