--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,17 +6,23 @@
 
 body {
     background: #090909;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
 }
 
 .app-container {
+    margin-top: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    min-height: 100vh; /* Контейнер занимает полную высоту экрана */
+    gap: 10px;
+    /*justify-content: center;*/
+    height: 100vh; /* Контейнер занимает полную высоту экрана */
     width: 100%;
+}
+
+.ton_amount_container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 60px;
 }
