--- a/src/components/DonutCountSection/DonutCountSection.css
+++ b/src/components/DonutCountSection/DonutCountSection.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column; /* Элементы располагаются в колонку */
     align-items: center;    /* Центрирование по горизонтали */
-    margin: 0 auto;         /* Центрирует контейнер по горизонтали */
+    margin: 10px auto;         /* Центрирует контейнер по горизонтали */
     width: fit-content;
 }
 
