--- a/src/components/ReceiveTonButton/ReceiveTonButton.css
+++ b/src/components/ReceiveTonButton/ReceiveTonButton.css
@@ -4,6 +4,7 @@
     text-align: center;
     font-size: 25px;
     font-weight: bold;
+    border: none;
     border-radius: 13px;
     padding: 10px 5px;
     color: #000;
