--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,17 +7,33 @@
 html, body {
     background: #090909;
     height: 100%;
-    overflow: visible;
+    overflow: hidden;
+}
+
+#root {
+    height: 100%; /* Убедитесь, что корневой элемент занимает весь экран */
+    display: flex;
+    flex-direction: column;
 }
 
 .app-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
+    padding-top: 20px;
+
+}
+
+.app-content-container {
+    font-family: 'Inter', sans-serif;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 10px;
     /*justify-content: center;*/
-    padding-top: 70px;
-    min-height: 100vh; /* Растягиваем на полную высоту родителя */
+    min-height: calc(100% - 52px); /* Растягиваем на полную высоту родителя */
     width: 100%; /* Растягиваем на полную ширину */
     overflow: hidden; /* Убираем прокрутку внутри контейнера */
 }
@@ -28,3 +44,14 @@ html, body {
     gap: 20px;
     margin-bottom: 60px;
 }
+
+.donate-page-message {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    max-width: 320px;
+}
+
+
