--- a/src/components/App.css
+++ b/src/components/App.css
@@ -20,14 +20,14 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
     padding-top: 20px;
-
 }
 
 .app-content-container {
     font-family: 'Inter', sans-serif;
     color: #fff;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,7 +35,9 @@ html, body {
     /*justify-content: center;*/
     min-height: calc(100% - 52px); /* Растягиваем на полную высоту родителя */
     width: 100%; /* Растягиваем на полную ширину */
-    overflow: hidden; /* Убираем прокрутку внутри контейнера */
+    /* overflow: hidden;  Убираем прокрутку внутри контейнера */
+    overflow-y: auto; /* Добавляем прокрутку, если контент выходит за пределы */
+
 }
 
 .ton_amount_container {
