--- a/src/components/NavigationButtons/NavigationButtons.css
+++ b/src/components/NavigationButtons/NavigationButtons.css
@@ -1,10 +1,8 @@
 .navigation-container {
-    position: absolute;
-    bottom: 0;
     margin: 0 auto;
-    padding-bottom: 40px;
+    /*padding-bottom: 40px;*/
     min-width: 360px;
-    height: 92px;
+    height: 52px;
     display: flex;
     flex-direction: row;
     justify-content: center;
