--- a/src/components/App.css
+++ b/src/components/App.css
@@ -22,90 +22,28 @@ html, body {
     align-items: center;
     height: 100vh;
     padding-top: 20px;
+    opacity: 0; /* Начальное состояние, невидим */
+    animation: fadeIn 1s ease-in-out forwards; /* Применяем анимацию */
 }
 
-.app-content-container {
-    font-family: 'Inter', sans-serif;
-    color: #fff;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    /*justify-content: center;*/
-    min-height: calc(100% - 52px); /* Растягиваем на полную высоту родителя */
-    width: 100%; /* Растягиваем на полную ширину */
-    /* overflow: hidden;  Убираем прокрутку внутри контейнера */
-    overflow-y: auto; /* Добавляем прокрутку, если контент выходит за пределы */
-
+@keyframes fadeIn {
+    from {
+        opacity: 0; /* Начальное состояние: невидимый */
+    }
+    to {
+        opacity: 1; /* Конечное состояние: полностью видимый */
+    }
 }
 
-.ton_amount_container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-bottom: 60px;
+.fade-out {
+    animation: fadeOut 1s ease-in-out;
 }
 
-.donate-page-message {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    text-align: center;
-    font-size: 25px;
-    font-weight: bold;
-    max-width: 320px;
-}
-
-/* Анимация плавного исчезновения
-.fade-exit {
-    opacity: 1;
-}
-
-.fade-exit-active {
-    opacity: 0;
-    transform: scale(0.98);
-    transition: opacity 1s ease, transform 1s ease;
-}
-*/
-/* Анимация плавного появления */
-/*.fade-enter {
-    opacity: 0;
-    transform: scale(0.98);
-    visibility: hidden;  Скрываем элемент до начала анимации
-}
-*/
-/*
-.fade-enter-active {
-    opacity: 1;
-    transform: scale(1);
-    visibility: visible;
-    transition: opacity 1s ease, transform 1s ease;
-}
-*/
-
-
-.welcome-enter {
-    opacity: 0;
-}
-.welcome-enter-active {
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
-}
-.welcome-exit {
-    opacity: 1;
-}
-.welcome-exit-active {
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-}
-
-.main-enter {
-    opacity: 0;
-}
-.main-enter-active {
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
-}
-.main-enter-done {
-    opacity: 1;
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
