--- a/src/components/WelcomeScreen/WelcomeScreen.css
+++ b/src/components/WelcomeScreen/WelcomeScreen.css
@@ -13,6 +13,53 @@
     color: #fff;
 }
 
+.welcome-content > * {
+    opacity: 0; /* Изначально элементы скрыты */
+    transform: translateY(20px); /* Эффект подъема */
+    animation: fadeIn 0.5s ease-out forwards;
+}
+
+/* Задержки для каждого элемента */
+.welcome-content > :nth-child(1) {
+    animation-delay: 0.5s;
+}
+
+.welcome-content > :nth-child(2) {
+    animation-delay: 1s;
+}
+
+.welcome-content > :nth-child(3) {
+    animation-delay: 1.5s;
+}
+
+.welcome-content > :nth-child(4) {
+    animation-delay: 2s;
+}
+
+.welcome-content > :nth-child(5) {
+    animation-delay: 2.5s;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(20px); /* Эффект подъема */
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(720deg); /* Два полных оборота */
+    }
+}
+
 .welcome-content h1 {
     font-size: 2rem;
     margin: 1rem 0;
@@ -20,8 +67,11 @@
 
 .welcome-content img {
     margin-top: 1rem;
+    overflow: visible;
     width: 100px;
     height: 100px;
+    opacity: 0; /* Изначально скрыта */
+    animation: fadeIn 0.5s ease-out 2.5s forwards, spin 2.5s ease-out 2.5s forwards; /* Задержка на 2.5с */
 }
 
 .text-with-shadow {
