--- a/src/components/ConnectButton/ConnectButton.css
+++ b/src/components/ConnectButton/ConnectButton.css
@@ -1,29 +1,112 @@
-button[data-tc-button="true"] {
-    width: 184px;
-    background-color: #fff;
-    border-radius: 11px;
-    color: #090909; /* Цвет текста */
-    display: flex;
-    justify-content: center; /* Горизонтальное выравнивание */
-    align-items: center;     /* Вертикальное выравнивание */
-    text-align: center;
+.connect-button {
+    width: 217px;
+    height: 33px;
+    background-color: #E42A93;
+    color: #fff;
+    border: 2px solid #fff;
+    border-radius: 5px;
     font-size: 20px;
-    padding: 10px;
-    box-shadow: 10px 5px 5px  rgba(253, 82, 174, 0.9);
+    font-weight: bold;
+    text-align: center;
 }
 
-button[data-tc-button="true"]:hover {
-    /* Можно добавить эффект при наведении, если необходимо */
-    opacity: 0.9;
+.connect-button-auth {
+    width: 153px;
+    height: 33px;
+    padding: 7px 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #282828;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+
 }
 
-[data-tc-connect-button="true"] span,
-[data-tc-connect-button="true"] [data-tc-text="true"] {
-    color: #090909 ; /* Чёрный текст */
+.wallet-address {
+    font-size: 16px;
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
 }
 
-/* Скрываем иконку внутри кнопки */
-[data-tc-connect-button="true"] svg {
-    display: none ;
+.modal {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: white;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    border-radius: 10px 10px 0 0;
+    z-index: 1000;
 }
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+/*button[data-tc-button="true"] {*/
+/*    width: 184px;*/
+/*    background-color: #fff;*/
+/*    border-radius: 11px;*/
+/*    color: #090909; !* Цвет текста *!*/
+/*    display: flex;*/
+/*    justify-content: center; !* Горизонтальное выравнивание *!*/
+/*    align-items: center;     !* Вертикальное выравнивание *!*/
+/*    text-align: center;*/
+/*    font-size: 20px;*/
+/*    padding: 10px;*/
+/*    box-shadow: 10px 5px 5px  rgba(253, 82, 174, 0.9);*/
+/*}*/
+
+/*button[data-tc-button="true"]:hover {*/
+/*    !* Можно добавить эффект при наведении, если необходимо *!*/
+/*    opacity: 0.9;*/
+/*}*/
+
+/*[data-tc-connect-button="true"] span,*/
+/*[data-tc-connect-button="true"] [data-tc-text="true"] {*/
+/*    color: #090909 ; !* Чёрный текст *!*/
+/*}*/
+
+/*!* Скрываем иконку внутри кнопки *!*/
+/*[data-tc-connect-button="true"] svg {*/
+/*    display: none ;*/
+/*}*/
+
+/*button[data-tc-button="true"] {*/
+/*    width: 217px;*/
+/*    height: 33px;*/
+/*    background-color: #E42A93;*/
+/*    color: #fff;*/
+/*    border: 2px solid #fff;*/
+/*    border-radius: 5px;*/
+/*    font-size: 20px;*/
+/*    font-weight: bold;*/
+/*    text-align: center;*/
+/*    text-transform: uppercase;*/
+/*    display: flex;                   !* Используем Flexbox *!*/
+/*    justify-content: center;         !* Центрируем по горизонтали *!*/
+/*    align-items: center;             !* Центрируем по вертикали *!*/
+/*}*/
+
+/*!* Скрываем иконку внутри кнопки *!*/
+/*[data-tc-connect-button="true"] svg {*/
+/*    display: none ;*/
+/*}*/
+
+/*[data-tc-connect-button="true"] {*/
+/*    width: 358px;*/
+/*    height: 54px;*/
+/*    background-color: #E42A93;*/
+/*    font-family: 'Inter', sans-serif;*/
+/*    font-size: 13px;*/
+/*    color: #fff;*/
+/*}*/
+
 
