--- a/src/components/ReceiveTonButton/ReceiveTonButton.css
+++ b/src/components/ReceiveTonButton/ReceiveTonButton.css
@@ -1,13 +1,18 @@
 .receive_ton_button {
-    width: 360px;
-    height: 53px;
-    text-align: center;
+    width: 349px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 25px;
     font-weight: bold;
     border: none;
-    border-radius: 13px;
-    padding: 10px 5px;
+    border-radius: 10px;
     color: #000;
     background-color: #fff;
-    box-shadow: 10px 5px 5px  rgba(253, 82, 174, 0.9);
+}
+
+.ton-symbol {
+    margin-left: 16px;
+    margin-right: 2px;
 }
