--- a/src/components/YourAmountButton/YourAmountButton.css
+++ b/src/components/YourAmountButton/YourAmountButton.css
@@ -23,7 +23,7 @@
 /*    background-color: #45a049;*/
 /*}*/
 
-.modal {
+.modal-donation {
     position: fixed;
     top: 0;
     left: 0;
@@ -43,7 +43,7 @@
 /*    text-align: center;*/
 /*}*/
 
-.modal-content {
+.modal-donation-content {
     background-color: #000000;
     color: #fff;
     padding: 20px;
@@ -123,7 +123,7 @@
     box-shadow: 5px 5px 5px  rgba(253, 82, 174, 0.9);
 }
 
-.modal_header {
+.modal-donation-header {
     font-family: Arial, sans-serif; /* Устанавливает Arial для блока */
     font-size: 25px;
     font-weight: bold;
