--- a/src/components/ChooseTonAmount/ChooseTonAmount.css
+++ b/src/components/ChooseTonAmount/ChooseTonAmount.css
@@ -1,9 +1,13 @@
 .ton_amount {
-    min-width: 360px;
-    height: 53px;
+    min-width: 375px;
+    height: 63px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     background-color: #090909;
     color: #fff;
+    padding: 17px 13px 16px 16px;
     font-size: 25px;
     font-weight: bold;
     border: 2px solid #282828;
@@ -11,6 +15,22 @@
 }
 
 .ton_amount.active {
-    box-shadow: 10px 5px 5px  rgba(253, 82, 174, 0.9);
-    border: 2px solid #ffffff;
+    border: 2px solid #E42A93;
+}
+
+.choose-ton-amount-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    color: #fff;
+}
+
+.choose-donut-amount-container {
+    color: #8B8B8B;
+    font-size: 16px;
+}
+.choose-donut-amount-container.active {
+    color: #E42A93;
 }
