--- a/src/components/DonateButton/DonateButton.css
+++ b/src/components/DonateButton/DonateButton.css
@@ -1,12 +1,13 @@
 .donate_button {
-    min-width: 360px;
-    height: 53px;
-    padding: 10px 5px;
-    text-align: center;
+    min-width: 349px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 25px;
     font-weight: bold;
     border: none;
-    border-radius: 13px;
+    border-radius: 10px;
 }
 
 .donate_button:disabled {
@@ -16,11 +17,10 @@
 .donate_button.active {
     background-color: #fff;
     color: #090909;
-    box-shadow: 10px 5px 5px  rgba(253, 82, 174, 0.9);
 }
 
 .donate_button.inactive {
-    background-color: #090909;
-    color: #42413F;
-    border: 2px solid #42413F;
+    background-color: #3A3737;
+    color: #111010;
+    border: none;
 }
