--- a/src/components/DonationPage/DonationPage.css
+++ b/src/components/DonationPage/DonationPage.css
@@ -1,3 +1,20 @@
+.connect-button-donation {
+    margin-bottom: 0;
+}
+
+.connect-button-auth-donation {
+    margin-bottom: 0;
+}
+
+.donate-page-header {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
 .app-content-container {
     font-family: 'Inter', sans-serif;
     color: #fff;
@@ -15,15 +32,14 @@
 .ton-amount-container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-bottom: 40px;
+    gap: 10px;
+    margin-bottom: 20px;
 }
 
 .donate-page-message {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 39px;
     text-align: center;
-    font-size: 25px;
+    font-size: 35px;
     font-weight: bold;
-    max-width: 320px;
+    max-width: 300px;
 }
