--- a/src/components/BackButton/BackButton.css
+++ b/src/components/BackButton/BackButton.css
@@ -1,6 +1,6 @@
 .back-button {
     position: absolute; /* Позиционируем относительно родителя */
-    left: 18px; /* Отступ от левого края окна */
+    left: 1.125rem; /* Отступ от левого края окна */
     background-color: #090909;
     border: none;
     cursor: pointer; /* Добавляем указатель на кнопке */
