--- a/src/components/ChooseTonAmount/ChooseTonAmount.css
+++ b/src/components/ChooseTonAmount/ChooseTonAmount.css
@@ -1,14 +1,14 @@
 .ton_amount {
-    min-width: 375px;
-    height: 63px;
+    min-width: 23.4375rem;
+    height: 3.9375rem;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #090909;
     color: #fff;
-    padding: 17px 13px 16px 16px;
-    font-size: 25px;
+    padding: 1.0625rem 0.8125rem 1rem 1rem;
+    font-size: 1.5625rem;
     font-weight: bold;
     border: 2px solid #282828;
     border-radius: 13px;
@@ -29,7 +29,7 @@
 
 .choose-donut-amount-container {
     color: #8B8B8B;
-    font-size: 16px;
+    font-size: 1rem;
 }
 .choose-donut-amount-container.active {
     color: #E42A93;
