--- a/src/components/ConnectButton/ConnectButton.css
+++ b/src/components/ConnectButton/ConnectButton.css
@@ -1,19 +1,19 @@
 .connect-button {
-    width: 217px;
-    height: 33px;
+    width: 13.5625rem;
+    height: 2.0625rem;
     background-color: #E42A93;
     color: #fff;
     border: 2px solid #fff;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: bold;
     text-align: center;
 }
 
 .connect-button-auth {
-    width: 153px;
-    height: 33px;
-    padding: 7px 0;
+    width: 9.5625rem;
+    height: 2.0625rem;
+    padding: 0.4375rem 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -25,30 +25,12 @@
 }
 
 .wallet-address {
-    font-size: 16px;
+    font-size: 1rem;
     color: #fff;
     font-weight: bold;
     text-align: center;
 }
 
-.modal {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: white;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    border-radius: 10px 10px 0 0;
-    z-index: 1000;
-}
-
-.modal-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-}
 
 /*button[data-tc-button="true"] {*/
 /*    width: 184px;*/
