--- a/src/components/ConnectModal/ConnectModal1.css
+++ b/src/components/ConnectModal/ConnectModal1.css
@@ -37,10 +37,14 @@
 
 .modal {
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 14.375rem;
+    height: 230px;
+    /*height: calc(env(safe-area-inset-bottom) + 14.375rem) ;*/
     background: #121214;
     border-radius: 16px 16px 0 0;
     z-index: 1000;
@@ -53,11 +57,12 @@
 
 .modal-header {
     position: relative;
-    margin-bottom: 1.4375rem;
+    margin-bottom: clamp(1rem, 1.4375rem, 23px);
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding-top: 0.9375rem;
+    align-items: center; /* Центрирует содержимое по вертикали */
+    height: clamp(2rem, 3rem, 48px); /* Задаём адаптивную высоту */
+    width: 100%;
 }
 
 .modal-header-wallet {
@@ -69,13 +74,11 @@
 
 .modal-close {
     position: absolute;
-    right: 0;
+    right: clamp(0.5rem, 1rem, 16px); /* Адаптивный отступ от правого края */
     top: 50%;
-    transform: translateY(-50%);
-    /*width: 30px;*/
-    /*height: 30px;*/
-    width: 1.875rem;
-    height: 1.875rem;
+    transform: translateY(-50%); /* Центрирует по вертикали */
+    width: clamp(1.5rem, 1.875rem, 30px); /* Адаптивная ширина */
+    height: clamp(1.5rem, 1.875rem, 30px); /* Адаптивная высота */
     background-color: #121214;
     border: none;
     border-radius: 50%;
@@ -88,6 +91,7 @@
 
 .modal-content {
     margin-bottom: 2.0625rem;
+    width: 23.5rem;
     height: 3.6875rem;
     display: flex;
     flex-direction: row;
@@ -97,18 +101,20 @@
     border-radius: 10px;
     outline: 3px solid #E42A93;
     outline-offset: -3px;
-    padding: 0 0.5625rem 0 1.0625rem;
+    /*padding: 0 0.5625rem 0 1.0625rem;*/
 }
 
 .modal-content-wallet {
-    font-size: 1.125rem;
+    font-size: 0.9375rem;
     color: #fff;
+    margin-left: 0.5625rem;
 }
 
 .modal-content-status {
     display: flex;
     gap: 3px;
     align-items: center;
+    margin-right: 1.0625rem;
 }
 
 .active-status {
