--- a/src/components/DonationPage/DonationPage.css
+++ b/src/components/DonationPage/DonationPage.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 2.5rem;
 }
 
 .app-content-container {
@@ -24,7 +24,8 @@
     align-items: center;
     gap: 10px;
     /*justify-content: center;*/
-    min-height: calc(100% - 52px); /* Растягиваем на полную высоту родителя */
+    /*min-height: calc(100% - 52px); !* Растягиваем на полную высоту родителя *!*/
+    min-height: 100% ; /* Растягиваем на полную высоту родителя */
     width: 100%; /* Растягиваем на полную ширину */
     overflow-y: auto; /* Добавляем прокрутку, если контент выходит за пределы */
 }
@@ -32,14 +33,14 @@
 .ton-amount-container {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    margin-bottom: 20px;
+    gap: 0.625rem;
+    margin-bottom: 1.25rem;
 }
 
 .donate-page-message {
-    margin-bottom: 39px;
+    margin-bottom: 2.4375rem;
     text-align: center;
-    font-size: 35px;
+    font-size: 2.1875rem;
     font-weight: bold;
-    max-width: 300px;
+    max-width: 18.75rem;
 }
