--- a/src/components/DonutCountSection/DonutCountSection.css
+++ b/src/components/DonutCountSection/DonutCountSection.css
@@ -1,21 +1,22 @@
 .DonutCountSection_container {
     display: flex;
     flex-direction: column; /* Элементы располагаются в колонку */
-    align-items: center;    /* Центрирование по горизонтали */
-    margin: 0 auto 27px auto;         /* Центрирует контейнер по горизонтали */
+    align-items: center; /* Центрирование по горизонтали */
+    margin: 0 auto 1.6875rem auto; /* Центрируем контейнер по горизонтали */
     width: fit-content;
-    gap: 20px;
+    gap: 1.25rem; /* Расстояние между элементами */
 }
 
 .donut-count {
     color: #8B8B8B;
-    font-size: 60px;
-    line-height: 47px;
+    font-size: 3.75rem; /* Размер шрифта в rem */
+    line-height: 3rem;
     font-weight: bold;
 }
+
 p {
     color: #8B8B8B;
-    font-size: 30px;
-    line-height: 22px;
+    font-size: 1.875rem; /* Заменяем пиксели на rem */
+    line-height: 1.375rem;
     font-weight: bold;
 }
