--- a/src/components/YourAmountModal/YourAmountModal.css
+++ b/src/components/YourAmountModal/YourAmountModal.css
@@ -6,19 +6,38 @@
     height: 100vh;    /* Высота фона — 100% от высоты экрана */
     background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный фон */
     display: flex;    /* Flexbox для центрирования модального окна */
-    align-items: center;  /* Центрирование по вертикали */
+    align-items: flex-start;  /* Центрирование по вертикали */
     justify-content: center; /* Центрирование по горизонтали */
     z-index: 1000;    /* Обеспечивает, что окно будет поверх остальных элементов */
+    backdrop-filter: blur(5px); /* Добавляем эффект размытия */
+    -webkit-backdrop-filter: blur(5px); /* Для поддержки в WebKit-браузерах */
 }
 
 .amount-modal-container {
     width: 100%;
+    top: 3.8125rem;
     margin: 0 1.375rem 0 1.4375rem;
     background-color: #100f0f;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 0.625rem;
+    position: relative;
+}
+
+.amount-close-button {
+    position: absolute; /* Позволяет расположить кнопку относительно контейнера */
+    top: -0.5rem; /* Отступ сверху */
+    right: -0.5rem; /* Отступ справа */
+    background: none; /* Убираем фон кнопки */
+    border: none; /* Убираем рамку кнопки */
+    cursor: pointer; /* Добавляем курсор "рука" */
+    padding: 0; /* Убираем внутренние отступы */
+}
+
+.amount-close-button img {
+    /*width: 1.25rem; !* Устанавливаем размер изображения *!*/
+    /*height: 1.25rem; !* Устанавливаем размер изображения *!*/
 }
 
 .amount-modal-container .amount-modal-message {
@@ -61,6 +80,11 @@
     border-radius: 0.625rem;
 }
 
+.amount-input.with-error {
+    color: Red;
+    border: 2px solid red;
+}
+
 .amount-input:focus {
     outline: none; /* Убираем стандартную обводку */
     box-shadow: none; /* Убираем возможный тень, если она есть */
@@ -69,9 +93,10 @@
 .ton-info-container {
     width: 100%;
     margin: 0.0625rem 1.5625rem 1.25rem 1.5625rem;
+    padding: 0 1.5625rem;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .ton-info-balance {
@@ -97,6 +122,17 @@
     color: #C62225;
     font-size: 0.5rem;
     font-weight: bold;
+}
+
+.ton-info-warning span,
+.ton-info-warning img {
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;  /* Добавлена анимация */
+}
+
+.ton-info-warning span.show-error,
+ton-info-warning img.show-error {
+    opacity: 1;
 }
 
 .amount-confirm-button {
@@ -260,10 +296,17 @@ input[type="range"]:focus {
     height: 2.0625rem;
     max-width: calc(100% - 8.75rem);
     margin: 0 auto 2.25rem auto;
+    color: #000000;
     font-size: 1.25rem;
     font-weight: bold;
     text-align: center;
     border: none;
     border-radius: 5px;
     background-color: #3A3737;
+    cursor: none;
+}
+
+.amount-confirm-button.active {
+    background-color: #E42A93;
+    cursor: pointer;
 }
