--- a/src/pages/FriendsPage/FriendsPage.css
+++ b/src/pages/FriendsPage/FriendsPage.css
@@ -1,7 +1,121 @@
 .app-friends-container {
     width: 100%;
+    min-height: 100%;
+    flex-grow: 1;
     padding: 0 1.40625rem;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    font-family: Inter, sans-serif;
+}
+
+.app-friends-wrapper {
+    width: 100%;
+    height: 100%;
+    max-width: 22.3125rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.friends-page-header {
+    position: relative;
+    width: 100%;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    margin-bottom: 1.125rem;
+}
+
+.referral-ton-claimed {
+    width: 100%;
+    /*max-width: 22.3125rem;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1B1A1A;
+    padding: 1rem 0;
+    gap: 0.5rem;
+    border-radius: 10px;
+    margin-bottom: 0.8125rem;
+}
+
+.referral-ton-claimed span:first-child {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #8B8B8B;
+}
+
+.referral-ton-claimed span:last-child {
+    font-size: 1.5625rem;
+    font-weight: bold;
+    color: #fff;
+}
+
+.referral-ton-claimed div {
+    display: flex;
+    align-items: center;
+}
+
+.referral-ton-to-claim {
+    width: 100%;
+    /*max-width: 22.3125rem;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1B1A1A;
+    padding: 1rem 0;
+    gap: 0.875rem;
+    border-radius: 10px;
+    margin-bottom: 1.8125rem;
+}
+
+.referral-ton-to-claim div{
+    display: flex;
+    align-items: center;
+}
+
+.referral-ton-to-claim span{
+    font-size: 1.5625rem;
+    font-weight: bold;
+    color: #fff;
+}
+
+.text-container-friends {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.125rem;
+    color: #fff;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+.text-container-friends div {
+    display: flex;
+    align-items: center;
+    gap: 0.1rem;
+}
+
+.text-container-friends div img{
+}
+
+.friends-number {
+    width: 100%;
+    max-width: 22.3125rem;
+    display: flex;
+    /*justify-content: flex-start;*/
+    font-size: 1rem;
+    font-weight: bold;
+    color: #fff;
+    /*align-self: start;*/
+}
+
+.friends-list-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1; /* Это пространство растягивается и остается для списка друзей */
+    overflow-y: auto;
+    min-height: 1px;
 }
