--- a/src/components/DonationPage/DonationPage.css
+++ b/src/components/DonationPage/DonationPage.css
@@ -15,19 +15,25 @@
     margin-bottom: 2.5rem;
 }
 
-.app-content-container {
+.app-donation-container {
     font-family: 'Inter', sans-serif;
     color: #fff;
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
-    /*justify-content: center;*/
-    /*min-height: calc(100% - 52px); !* Растягиваем на полную высоту родителя *!*/
+    justify-content: space-between;
     min-height: 100% ; /* Растягиваем на полную высоту родителя */
     width: 100%; /* Растягиваем на полную ширину */
     overflow-y: auto; /* Добавляем прокрутку, если контент выходит за пределы */
+}
+
+.app-donation-wrapper {
+    width: 100%;
+    max-width: 23.4375rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .ton-amount-container {
