--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -5,20 +5,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     min-height: 100%; /* Растягиваем на полную высоту родителя calc(100% - 52px) */
     width: 100%;
     overflow-y: auto; /* Прокрутка, если контент выходит за пределы */
+}
+
+.app-main-wrapper {
+    width: 100%;
+    max-width: 21.8125rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Логотип пончика */
 .app-main-container .donut-logo {
     width: clamp(120px, 15.9375rem, 255px);; /* Увеличиваем минимальный размер для мобильных */
     height: auto;
-    margin-bottom: clamp(20px, 10rem, 102px); /* Адаптивный отступ */
+    /*margin-bottom: clamp(20px, 10rem, 102px); !* Адаптивный отступ *!*/
+}
+
+.main-button-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 0.9375rem;
 }
 
 .connect-button-main {
     margin-bottom: 3.25rem;
+
 }
 
 .connect-button-auth-main {
