--- a/src/components/YourAmountButton/YourAmountButton.css
+++ b/src/components/YourAmountButton/YourAmountButton.css
@@ -8,7 +8,7 @@
     font-weight: bold;
     border: 2px solid #282828;
     border-radius: 13px;
-    margin-bottom: clamp(60px, 8rem, 136px);
+    /*margin-bottom: clamp(60px, 8rem, 136px);*/
 }
 
 .your-amount-button.active {
